<?xml version="1.0"?>
<package format="2">
  <name>ricoh_theta_camera</name>
  <version>0.0.0</version>
  <description>The ricoh_theta_camera package</description>
  <maintainer email="v.ivan@ed.ac.uk">Vladimir Ivan</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>image_transport</depend>
  <depend>libjpeg</depend>
  <depend>libuvc_theta</depend>
  <depend>roscpp</depend>
</package>
